2004-11-24  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): fetch eBay official time, and fix timezone conversion

2004-11-23  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): omit seconds from change_date value;
	do not set TZ if it's already in the environment

2004-11-05  Kingpin  <mthurn@verizon.net>

	* t/motors.t: fix 1-page query

2004-10-25  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): handle default page format

	* lib/WWW/Search/Ebay/Stores.pm (native_setup_search): let parent object control the HTML page formatting params

2004-10-21  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): handle new HTML page format

	* lib/WWW/Search/Ebay/Stores.pm (native_setup_search): new CGI parameters
	parsing now handled by parent class

2004-09-25  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): now sets bid_count and bid_amount in the Result objects

	* lib/WWW/Search/Ebay/Motors.pm (native_setup_search): new backend!

	* t/motors.t: new test

	* lib/WWW/Search/Ebay.pm: added pod for how to search one category

2004-09-16  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm (date_to_rel): new function;
	(parse_tree): fix date sort;
	different date format in change_date;

2004-08-20  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/BuyItNow.pm: new file

	* t/buyitnow.t (my_test): new file

2004-07-23  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): fix for parsing result count

2004-06-05  Kingpin  <mthurn@verizon.net>

	* t/stores.t: new file

	* lib/WWW/Search/Ebay/Stores.pm: new file

	* lib/WWW/Search/Ebay.pm (currency_pattern): new function

2004-04-17  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (native_setup_search): new URL / CGI options
	(parse_tree): handle new HTML formatting

2004-04-08  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/ByEndDate.pm (parse_tree): fix undef warning
